# aish

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
aish/: __main__.py  cli.py  config.py  executor.py  history.py  llm.py  logger.py  safety.py
