[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aish-cli"
version = "0.1.1"
description = "AI-powered shell command assistant - convert natural language to safe executable commands"
readme = "README.md"
authors = [{ name = "Kuroome", email = "dethe3255@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
keywords = ["ai", "shell", "cli", "command", "assistant", "gpt"]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/KanoCifer/aish"

[project.scripts]
aish = "aish.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["aish*"]
