[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aish-cli"
version = "0.1.6"
description = "AI-powered shell command assistant - convert natural language to safe executable commands"
readme = "README.md"
authors = [{ name = "Kuroome", email = "dethe3255@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Shells",
    "Topic :: Utilities",
]
keywords = ["ai", "shell", "cli", "command", "assistant", "gpt"]
requires-python = ">=3.10"
dependencies = [
    "openai>=2.26.0",
    "typer>=0.24.1",
    "rich>=14.3.3",
    "httpx[socks]>=0.28.1",
    "pydantic>=2.12.5",
]

[project.urls]
Homepage = "https://github.com/KanoCifer/aish"

[project.scripts]
aish = "aish.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["aish*"]
